--- a/views/dashboard/dashboard.pug
+++ b/views/dashboard/dashboard.pug
@@ -2,4 +2,128 @@ extends ../layout
 
 block content
 	.dashboard
-		| DUDE
+		.grid-3_lg-2_sm-1
+			.col
+				section
+					h2 Overview
+					.box
+						ul.status-list
+							li
+								h3
+									span Web Applications
+									i.fa.fa-check
+								ul.components-list
+									li
+										span
+											strong Corporate Website
+											span Public facing website, investors relations, careers, etc.
+										span
+											strong OK
+											i.fa.fa-check
+									li
+										span
+											strong Intranet
+											span Employee portal with news, documents and people search
+										span
+											strong OK
+											i.fa.fa-check
+									li
+										span
+											strong Extranet
+											span Document libraries for projects and external stakeholders
+										span
+											strong OK
+											i.fa.fa-check
+							li
+								h3
+									span Communications
+									i.fa.fa-check
+								ul.components-list
+									li
+										span
+											strong Exchange
+											span Email and Calendar services
+										span
+											strong OK
+											i.fa.fa-check
+									li
+										span
+											strong Skype for Business
+											span Instant-messaging, audio and video conferencing services
+										span
+											strong OK
+											i.fa.fa-check
+							li
+								h3
+									span Network
+									i.fa.fa-check
+								ul.components-list
+									li
+										span
+											strong LAN
+											span Internal network within offices
+										span
+											strong OK
+											i.fa.fa-check
+									li
+										span
+											strong WAN
+											span Internet access and external resources
+										span.status-perfissues
+											strong Performance Issues
+											i.fa.fa-minus-square
+									li
+										span
+											strong VPN
+											span Encrypted tunnel between a client and the private internal network
+										span
+											strong OK
+											i.fa.fa-check
+							li
+								h3
+									span Data Storage
+									i.fa.fa-check
+								ul.components-list
+									li
+										span
+											strong File Shares
+											span Network storage for users / projects
+										span
+											strong OK
+											i.fa.fa-check
+									li
+										span
+											strong Databases
+											span Application databases
+										span
+											strong OK
+											i.fa.fa-check
+							li
+								h3
+									span Cloud Services
+									i.fa.fa-check
+								ul.components-list
+									li
+										span
+											strong Office 365
+											span Microsoft online services for businesses
+										span
+											strong OK
+											i.fa.fa-check
+									li
+										span
+											strong Visual Studio Online
+											span Services for developers and testers
+										span
+											strong OK
+											i.fa.fa-check
+			.col
+				section
+					h2 Incidents
+					.box
+						| Test
+			.col
+				section
+					h2 Uptime
+					.box
+						| Test
