--- a/client/css/layout/_header.scss
+++ b/client/css/layout/_header.scss
@@ -1,6 +1,8 @@
 header {
 	background-color: material-color('light-blue', '700');
 	box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+	position: relative;
+	z-index: 1;
 
 	.logo {
 		display: flex;
