--- a/views/dashboard/dashboard.pug
+++ b/views/dashboard/dashboard.pug
@@ -173,7 +173,12 @@ block content
 										span Jun 29, 15:10 UTC
 									li
 										strong Affected Regions:
-										span Canada, USA and UK
+										span
+											a(href='/canada') Canada
+											|  ,
+											a(href='/canada') USA
+											|  and 
+											a(href='/canada') UK
 								ul.updates-list
 									li
 										strong Update
