--- a/client/css/layout/_common.scss
+++ b/client/css/layout/_common.scss
@@ -11,7 +11,7 @@ body {
 	margin: 0;
 	padding: 0;
 	height: 100%;
-	background-color: material-color('grey', '50');
+	background-color: material-color('blue-grey','50');
 }
 
 a {
@@ -23,4 +23,9 @@ a {
 		text-decoration: underline;
 	}
 
+}
+
+main {
+	background-color: material-color('grey', '50');
+	z-index: 0;
 }
