Admin section + Login

--- a/client/css/app.scss
+++ b/client/css/app.scss
@@ -6,6 +6,7 @@
 @import './layout/_header';
 @import './layout/_footer';
 
+@import './components/_alerts';
 @import './components/_button';
 @import './components/_incidents-list';
 @import './components/_regions-list';
