--- a/client/css/components/_button.scss
+++ b/client/css/components/_button.scss
@@ -34,6 +34,8 @@
 
 			&:hover {
 				background-color: material-color($color-name, '600');
+				color: #FFF;
+				text-decoration: none;
 				@include prefix(text-shadow, 1px 1px 0 material-color($color-name, '800'));
 			}
 
@@ -56,7 +58,8 @@
 	}
 
 	&.btn-block {
-		display: block;
+		display: flex;
+		justify-content: center;
 		width: 100%;
 	}
 
