--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,6 +20,8 @@ html
 		script(type='text/javascript', src='/js/libs.js')
 		script(type='text/javascript', src='/js/app.js')
 
+		block head
+
 	body
 		#root
 			include ./common/header
