Regions + Users admin management

--- a/client/css/layout/_header.scss
+++ b/client/css/layout/_header.scss
@@ -19,6 +19,11 @@ header {
 			padding-left: 25px;
 		}
 
+		> a {
+			display: inline-block;
+			height: 30px;
+		}
+
 		button {
 			display: inline-flex;
 			align-items: center;
