--- a/views/admin/sd.pug
+++ b/views/admin/sd.pug
@@ -13,18 +13,18 @@ ul.admin-sd
 	li(data-link='/admin/templates')
 		i.fa.fa-copy
 		| Templates
-	li(data-link='/admin/regions')
-		i.fa.fa-globe
-		| Regions
 	li(data-link='/admin/components')
 		i.fa.fa-tasks
 		| Components
-	li(data-link='/admin/statuses')
-		i.fa.fa-bookmark
-		| Statuses
+	li(data-link='/admin/regions')
+		i.fa.fa-globe
+		| Regions
 	li(data-link='/admin/users')
 		i.fa.fa-users
 		| Users
+	li(data-link='/admin/api')
+		i.fa.fa-sitemap
+		| API
 
 a.btn.btn-light-blue.btn-block(href='/')
 	span
