--- a/views/common/alerts.pug
+++ b/views/common/alerts.pug
@@ -12,3 +12,6 @@ if appflash.length > 0
 		| var alertsData = 
 		!= JSON.stringify(appflash)
 		| ;
+else
+	script(type='text/javascript')
+		| var alertsData = [];
