--- a/views/common/header.pug
+++ b/views/common/header.pug
@@ -1,7 +1,7 @@
 header
 	.logo
 		span System Status
-		img(src='/images/logo.png',alt="Logo")
+		a(href='/'): img(src='/images/logo.png',alt="Logo")
 		button
 			span
 				i.fa.fa-bell
