--- a/client/css/sections/_admin.scss
+++ b/client/css/sections/_admin.scss
@@ -65,7 +65,16 @@
 
 }
 
-.admin-regions {
+.admin-box {
+	border: 1px solid material-color('grey', '300');
+	border-radius: 2px;
+	background-color: #FFF;
+	padding: 25px;
+	color: material-color('grey', '700');
+	font-size: 14px;
+}
+
+.admin-list {
 	margin: 0;
 	padding: 0;
 	list-style-type: none;
@@ -90,8 +99,16 @@
 			background-color: material-color('grey', '100');
 		}
 
+		> span:first-child {
+
+			.fa {
+				margin-right: 15px;
+				color: material-color('teal', '600');
+			}
+
+		}
+
 		.handle {
-			margin-right: 15px;
 			cursor: move;
 		}
 
