--- a/client/css/sections/_admin.scss
+++ b/client/css/sections/_admin.scss
@@ -74,6 +74,93 @@
 	font-size: 14px;
 }
 
+.admin-prelist {
+	padding: 15px;
+	border: 1px solid material-color('teal', '100');
+	border-radius: 2px;
+	background-color: material-color('teal', '50');
+	margin-bottom: 15px;
+
+	> h2 {
+		font-size: 14px;
+		margin: 0;
+		padding: 0 0 5px 0;
+		font-size: 16px;
+		font-weight: 600;
+		color: material-color('teal','500');
+	}
+
+	> span {
+		display: block;
+		font-size: 14px;
+		margin: 0;
+		padding: 0 0 15px 0;
+		font-size: 12px;
+		font-weight: 400;
+		color: material-color('teal','500');
+	}
+
+}
+
+.admin-headlist {
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+	
+	> li {
+		padding: 15px;
+		border: 1px solid material-color('blue', '100');
+		border-radius: 2px;
+		background-color: material-color('blue', '50');
+		margin-bottom: 15px;
+
+		> h2 {
+			align-items: center;
+			display: flex;
+			font-size: 14px;
+			margin: 0;
+			padding: 0 0 15px 0;
+			justify-content: space-between;
+
+			> span:first-child {
+				display: flex;
+				align-items: center;
+				font-size: 20px;
+				font-weight: 600;
+				color: material-color('blue', '700');
+
+				.fa {
+					margin-right: 15px;
+					color: material-color('blue', '600');
+				}
+			}
+
+			.handle {
+				cursor: move;
+			}
+
+			> span:last-child {
+				display: flex;
+				align-items: center;
+
+				.fa {
+					margin-left: 10px;
+					cursor: pointer;
+					color: material-color('blue', '700');
+				}
+
+			} 
+
+		}
+
+		> ul {
+			margin-left: 25px;
+		}
+
+	}
+
+}
+
 .admin-list {
 	margin: 0;
 	padding: 0;
@@ -100,10 +187,30 @@
 		}
 
 		> span:first-child {
+			display: flex;
+			align-items: center;
 
 			.fa {
 				margin-right: 15px;
 				color: material-color('teal', '600');
+			}
+
+			p {
+				padding: 0;
+				margin:0;
+
+				> strong {
+					display: block;
+					font-weight: 600;
+					color: material-color('teal', '800');
+				}
+				
+				> span {
+					display: block;
+					font-size: 12px;
+					color: material-color('grey', '600');
+				}
+
 			}
 
 		}
@@ -119,6 +226,7 @@
 			.fa {
 				margin-left: 10px;
 				cursor: pointer;
+				color: material-color('teal', '700');
 			}
 
 		} 
