--- a/views/admin/regions.pug
+++ b/views/admin/regions.pug
@@ -17,7 +17,7 @@ block admin-content
 				each region in regions
 					li(data-id=region._id, data-name=region.name)
 						span
-							i.fa.fa-bars.handle
+							i.fa.fa-sort.handle
 							= region.name
 						span
 							i.fa.fa-edit.edit-action
