--- a/views/error.pug
+++ b/views/error.pug
@@ -15,7 +15,7 @@ html
 
 	body(class='server-error')
 		#root
-			img(src='/images/logo_50x50.png')
+			img(src='/images/logo-text_218x80.png')
 			h1 Oops, something went wrong
 			h4= message
 			pre #{error.stack}
