--- a/client/css/sections/_admin.scss
+++ b/client/css/sections/_admin.scss
@@ -130,8 +130,9 @@
 				color: material-color('blue', '700');
 
 				.fa {
-					margin-right: 15px;
+					padding-right: 10px;
 					color: material-color('blue', '600');
+					font-size: 16px;
 				}
 			}
 
@@ -168,6 +169,7 @@
 	border: 1px solid material-color('grey', '400');
 	border-radius: 2px;
 	background-color: #FFF;
+	min-height: 25px;
 
 	> li {
 		align-items: center;
@@ -191,7 +193,7 @@
 			align-items: center;
 
 			.fa {
-				margin-right: 15px;
+				padding-right: 15px;
 				color: material-color('teal', '600');
 			}
 
