--- a/views/admin/components.pug
+++ b/views/admin/components.pug
@@ -16,79 +16,44 @@ block admin-actions
 
 block admin-content
 	#admin-components
-		if comps.length > 0
-			.admin-prelist
-				h2 Uncategorized Items
-				span Components below must be placed inside a Component Group. They will not be displayed until they are part of a group.
-				ul.admin-list
-					each comp in _.find(comps, { id: null }).comps
-						li(data-id=comp._id, data-name=comp.name)
+		if comps
+			if _.has(comps, 'uncategorized')
+				.admin-prelist
+					h2 Uncategorized
+					span Components below must be placed inside a Component Group. They will not be displayed until they are part of a group.
+					ul.admin-list
+						each comp in comps.uncategorized
+							li(data-id=comp._id.toString(), data-name=comp.name)
+								span
+									i.fa.fa-sort.handle
+									p
+										strong= comp.name
+										span= comp.description
+								span
+									i.fa.fa-edit.edit-action
+									i.fa.fa-trash-o.delete-action
+			ul.admin-headlist
+				each grp in groups
+					li(data-id=grp.id, data-name=grp.name, data-shortname=grp.shortName)
+						h2
 							span
-								i.fa.fa-bars.handle
-								p
-									strong= comp.name
-									span= comp.description
+								i.fa.fa-sort.handle
+								= grp.name
 							span
 								i.fa.fa-edit.edit-action
 								i.fa.fa-trash-o.delete-action
-			ul.admin-headlist
-				li
-					h2
-						span
-							i.fa.fa-bars.handle
-							| Web Apps
-						span
-							i.fa.fa-edit.edit-action
-							i.fa.fa-trash-o.delete-action
-					ul.admin-list
-						each comp in comps
-							li(data-id=comp._id, data-name=comp.name)
-								span
-									i.fa.fa-bars.handle
-									p
-										strong= comp.name
-										span= comp.description
-								span
-									i.fa.fa-edit.edit-action
-									i.fa.fa-trash-o.delete-action
-				li
-					h2
-						span
-							i.fa.fa-bars.handle
-							| Communications
-						span
-							i.fa.fa-edit.edit-action
-							i.fa.fa-trash-o.delete-action
-					ul.admin-list
-						each comp in comps
-							li(data-id=comp._id, data-name=comp.name)
-								span
-									i.fa.fa-bars.handle
-									p
-										strong= comp.name
-										span= comp.description
-								span
-									i.fa.fa-edit.edit-action
-									i.fa.fa-trash-o.delete-action
-				li
-					h2
-						span
-							i.fa.fa-bars.handle
-							| Network
-						span
-							i.fa.fa-edit.edit-action
-							i.fa.fa-trash-o.delete-action
-					ul.admin-list
-						each comp in comps
-							li(data-id=comp._id, data-name=comp.name)
-								span
-									i.fa.fa-bars.handle
-									p
-										strong= comp.name
-										span= comp.description
-								span
-									i.fa.fa-edit.edit-action
-									i.fa.fa-trash-o.delete-action
+						ul.admin-list
+							if _.has(comps, 'g_' + grp.id)
+								each comp in _.get(comps, 'g_' + grp.id)
+									li(data-id=comp._id.toString(), data-name=comp.name)
+										span
+											i.fa.fa-sort.handle
+											p
+												strong= comp.name
+												span= comp.description
+										span
+											i.fa.fa-edit.edit-action
+											i.fa.fa-trash-o.delete-action
 		else
 			.admin-box
 				| No components have been created yet.
