Templates Model + Routes

--- a/views/admin/sd.pug
+++ b/views/admin/sd.pug
@@ -19,12 +19,24 @@ ul.admin-sd
 	li(data-link='/admin/regions')
 		i.fa.fa-globe
 		| Regions
+	li(data-link='/admin/metrics')
+		i.fa.fa-bar-chart
+		| Metrics
+	li(data-link='/admin/monitors')
+		i.fa.fa-heartbeat
+		| Monitors
 	li(data-link='/admin/users')
 		i.fa.fa-users
 		| Users
+	li(data-link='/admin/subscribers')
+		i.fa.fa-bullhorn
+		| Subscribers
 	li(data-link='/admin/api')
 		i.fa.fa-sitemap
 		| API
+	li(data-link='/admin/settings')
+		i.fa.fa-gear
+		| Settings
 
 a.btn.btn-light-blue.btn-block(href='/')
 	span
