Incidents Create Form

--- a/client/css/app.scss
+++ b/client/css/app.scss
@@ -8,6 +8,8 @@
 
 @import './components/_alerts';
 @import './components/_button';
+@import './components/_checkbox';
+@import './components/_dropdown';
 @import './components/_incidents-list';
 @import './components/_regions-list';
 @import './components/_status-list';
