--- a/views/admin/sd.pug
+++ b/views/admin/sd.pug
@@ -29,7 +29,7 @@ ul.admin-sd
 		i.fa.fa-users
 		| Users
 	li(data-link='/admin/subscribers')
-		i.fa.fa-bullhorn
+		i.fa.fa-bell
 		| Subscribers
 	li(data-link='/admin/api')
 		i.fa.fa-sitemap
