--- a/client/css/sections/_admin.scss
+++ b/client/css/sections/_admin.scss
@@ -28,8 +28,9 @@
 			border-top: none;
 		}
 
-		&:hover {
+		&:hover, &.active {
 			background-color: material-color('blue-grey', '100');
+			text-shadow: 1px 1px 0 #FFF;
 		}
 
 		.fa {
@@ -90,7 +91,7 @@
 			border-top: none;
 		}
 
-		label {
+		label:first-child {
 			display: block;
 			color: material-color('grey', '600');
 			padding-bottom: 5px;
@@ -98,7 +99,7 @@
 			font-weight: 600;
 		}
 
-		input {
+		input[type=text] {
 			border: 1px solid #CCC;
 			border-radius: 4px;
 			background-color: #FFF;
@@ -110,6 +111,13 @@
 			font-size: 14px;
 			color: material-color('grey', '700');
 			width: 100%;
+			transition: .5s ease;
+
+			&:hover {
+				@include prefix(box-shadow, inset 0 0 5px 0 rgba(0,0,0,0.20));
+				border-color: material-color('blue-grey', '200');
+			}
+
 		}
 
 		&.form-footer {
