--- a/views/common/header.pug
+++ b/views/common/header.pug
@@ -2,10 +2,12 @@ header
 	.logo
 		span System Status
 		a(href='/'): img(src='/images/logo.png',alt="Logo")
-		button
-			span
-				i.fa.fa-bell
-				| Subscribe
+		div
+			i#notifload
+			button
+				span
+					i.fa.fa-bell
+					| Subscribe
 	nav
 		ul
 			li
