--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,8 @@ html
 	head
 		meta(http-equiv='X-UA-Compatible', content='IE=edge')
 		meta(charset='UTF-8')
+		meta(name='theme-color', content='#009688')
+		meta(name='msapplication-TileColor', content='#009688')
 		title= appconfig.title
 
 		// Favicon
