Added component state to Create Incident form

--- a/client/css/sections/_admin.scss
+++ b/client/css/sections/_admin.scss
@@ -148,6 +148,12 @@
 
 		}
 
+		.dropdown li .fa {
+
+			@include status-colors('color');
+
+		}
+
 		&.form-footer {
 			display: flex;
 			justify-content: flex-end;
